# functions

./: .gitignore  README.md
.github/workflows/: python-tests.yml
src/cellar-entity-downloader/: cellar-entity-downloader.py  pyproject.toml
src/db-manager/: .env.example  Makefile  README.md  __init__.py  db_manager.py  docker-compose.yml  pyproject.toml
src/db-manager/sql/: init.sql
src/db-manager/tests/: test_db_manager.py
src/entitymention-cleaner/: Makefile  README.md  __init__.py  entitymention_cleaner.py  pyproject.toml
src/entitymention-cleaner/tests/: test_entitymention_cleaner.py
src/entitymention-clusterer/: README.md  __init__.py  entitymention_clusterer.py  pyproject.toml
src/entitymention-clusterer/tests/: test_entitymention_clusterer.py
src/entitymention-embedder/: README.md  __init__.py  entitymention_embedder.py  pyproject.toml
src/entitymention-embedder/tests/: test_entitymention_embedder.py
src/model/: Makefile  README.md  __init__.py  entitymention.py  pyproject.toml
src/model/tests/: conftest.py  test_entitymention.py
src/rdf-entitymention-extractor/: README.md  SPECIFICATIONS.md  __init__.py  pyproject.toml  rdf_entitymention_extractor.py
src/rdf-entitymention-extractor/tests/: test_rdf_entitymention_extractor.py
