[project]
name = "entitymention-cleaner"
version = "0.1.0"
description = "Clean and normalize EntityMention properties for the Entity Resolution Engine (ERE)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "EUPL" }

dependencies = [
    "ere-model",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entitymention_cleaner.py"]

[tool.uv.sources]
ere-model = { path = "../model" }

[tool.pytest.ini_options]
pythonpath = ["."]
