[project]
name = "entitymention-embedder"
version = "0.1.0"
description = "Calculate embeddings for EntityMention properties in the Entity Resolution Engine (ERE)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "EUPL" }

dependencies = [
    "ere-model",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entitymention_embedder.py"]

[tool.uv.sources]
ere-model = { path = "../model" }

[tool.pytest.ini_options]
pythonpath = ["."]
