[project]
name = "ere-model"
version = "0.1.0"
description = "Shared Pydantic models for the Entity Resolution Engine (ERE) pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "EUPL" }

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entitymention.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
